objects/Exigence__c.object
<CustomObject>
    <fields>
        <fullName>DescriptionEcart__c</fullName>
        <label>DescriptionEcart</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXG_NoMatchedWithRFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non identifié dans le RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstEnEcart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Est en écart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_dev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_flux__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact flux</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exigence maître</label>
        <referenceTo>Exigence__c</referenceTo>
        <relationshipLabel>Exigences enfants</relationshipLabel>
        <relationshipName>ExigencesEnfants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Motif__c</fullName>
        <label>Motif</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Statut__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Réalisation complexe</fullName>
                </value>
                <value>
                    <fullName>Evolution des besoins</fullName>
                </value>
                <value>
                    <fullName>Doublon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objet_concerne__c</fullName>
        <label>Objet(s) concerné(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phase_de_realisation__c</fullName>
        <label>Phase de réalisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cadrage</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Déploiement</fullName>
                </value>
                <value>
                    <fullName>Formation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processus</label>
        <referenceTo>Processus__c</referenceTo>
        <relationshipLabel>Exigences</relationshipLabel>
        <relationshipName>Exigences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Reference__c</fullName>
        <description>Référence de l&apos;exigence dans un RFP (ID, page, chapitre, ...)</description>
        <label>Référence RFP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scope</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_pressentie__c</fullName>
        <label>Solution pressentie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Déclaré</fullName>
                    <default>true</default>
                    <label>Déclaré</label>
                </value>
                <value>
                    <fullName>Instruction</fullName>
                </value>
                <value>
                    <fullName>Confirmé</fullName>
                </value>
                <value>
                    <fullName>Arbitrage Requis</fullName>
                </value>
                <value>
                    <fullName>En cours de réalisation</fullName>
                </value>
                <value>
                    <fullName>Abandonné</fullName>
                </value>
                <value>
                    <fullName>Reporté</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titre__c</fullName>
        <label>Titre</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User story</fullName>
                </value>
                <value>
                    <fullName>Règle de gestion</fullName>
                </value>
                <value>
                    <fullName>Fonctionnalité outil</fullName>
                </value>
                <value>
                    <fullName>Process métier</fullName>
                </value>
                <value>
                    <fullName>Champs / Ecrans</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Flux &amp; données</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valeur_metier__c</fullName>
        <label>Valeur métier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indispensable</fullName>
                </value>
                <value>
                    <fullName>Souhaitée</fullName>
                </value>
                <value>
                    <fullName>Possible</fullName>
                </value>
                <value>
                    <fullName>Différable</fullName>
                </value>
                <value>
                    <fullName>Inutile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workshop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workshop</label>
        <referenceTo>Workshop__c</referenceTo>
        <relationshipLabel>Exigences</relationshipLabel>
        <relationshipName>Exigences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>complexite__c</fullName>
        <label>Complexité (en points)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>numberRelatedDesign__c</fullName>
        <label>Nombre d&apos;element de design associé</label>
        <summaryForeignKey>Configuration__c.Exigence__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Exigence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>RFP_Reference__c</columns>
        <columns>Scope__c</columns>
        <columns>Type__c</columns>
        <columns>Valeur_metier__c</columns>
        <columns>Statut__c</columns>
        <columns>Processus__c</columns>
        <columns>Workshop__c</columns>
        <columns>Phase_de_realisation__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <listViews>
        <fullName>Exigences_MDM</fullName>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>RFP_Reference__c</columns>
        <columns>Scope__c</columns>
        <columns>Processus__c</columns>
        <columns>Statut__c</columns>
        <columns>Valeur_metier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Master data</value>
        </filters>
        <label>Exigences MDM</label>
    </listViews>
    <listViews>
        <fullName>Exigences_Marketing</fullName>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>RFP_Reference__c</columns>
        <columns>Scope__c</columns>
        <columns>Processus__c</columns>
        <columns>Statut__c</columns>
        <columns>Valeur_metier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Exigences Marketing</label>
    </listViews>
    <listViews>
        <fullName>Exigences_Sales</fullName>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>RFP_Reference__c</columns>
        <columns>Scope__c</columns>
        <columns>MasterRequirement__c</columns>
        <columns>EXG_NoMatchedWithRFP__c</columns>
        <columns>Processus__c</columns>
        <columns>Statut__c</columns>
        <columns>Valeur_metier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Exigences Sales</label>
    </listViews>
    <listViews>
        <fullName>Exigences_Services</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>Type__c</columns>
        <columns>RFP_Reference__c</columns>
        <columns>Scope__c</columns>
        <columns>Processus__c</columns>
        <columns>Workshop__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Services,Field Services</value>
        </filters>
        <label>Exigences Services</label>
    </listViews>
    <listViews>
        <fullName>Technical_Scope</fullName>
        <columns>NAME</columns>
        <columns>Titre__c</columns>
        <columns>Scope__c</columns>
        <columns>Description__c</columns>
        <columns>Solution_pressentie__c</columns>
        <columns>Phase_de_realisation__c</columns>
        <columns>Processus__c</columns>
        <columns>RFP_Reference__c</columns>
        <columns>Workshop__c</columns>
        <columns>Valeur_metier__c</columns>
        <columns>Type__c</columns>
        <columns>Statut__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Technical Scope</value>
        </filters>
        <label>Exigences Technique</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exigences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>